underworld/libUnderworld/StGermain/Base/IO/tests/expected/errorMsg-Invalid.txt
./StGermain/Base/IO/input/Invalid.xml:3: parser error : Opening and ending tag mismatch: invalid line 3 and param
<invalid></param>
                 ^


-----------------------------STGERMAIN-ERROR-----------------------------
Error: File ./StGermain/Base/IO/input/Invalid.xml can't be parsed.
-------------------------------------------------------------------------


